--- a/package.json
+++ b/package.json
@@ -10,13 +10,18 @@
     "@types/node": "^16.18.120",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "axios": "^1.7.8",
+    "bcryptjs": "^2.4.3",
+    "notistack": "^3.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.53.2",
     "react-icons": "^5.3.0",
     "react-router": "^7.0.1",
     "react-scripts": "5.0.1",
     "swiper": "^11.1.15",
     "typescript": "^4.9.5",
+    "uuid": "^11.0.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -44,6 +49,8 @@
     ]
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/uuid": "^10.0.0",
     "tailwindcss": "^3.4.15"
   }
 }
