--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
+    "@tanstack/react-query": "^5.62.2",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.120",
@@ -18,6 +17,7 @@
     "react-hook-form": "^7.53.2",
     "react-icons": "^5.3.0",
     "react-router": "^7.0.1",
+    "react-router-dom": "^7.0.2",
     "react-scripts": "5.0.1",
     "swiper": "^11.1.15",
     "typescript": "^4.9.5",
@@ -49,8 +49,14 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.0.1",
+    "@testing-library/react-hooks": "^8.0.1",
     "@types/bcryptjs": "^2.4.6",
+    "@types/react-router-dom": "^5.3.3",
     "@types/uuid": "^10.0.0",
-    "tailwindcss": "^3.4.15"
+    "jest": "^29.7.0",
+    "tailwindcss": "^3.4.15",
+    "ts-jest": "^29.2.5"
   }
 }
